--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "laps",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Personal web based laps timing system for RC HourGlass project",
   "main": "laps.js",
   "dependencies": {
     "command-line-args": "^5.1.1",
+    "command-line-usage": "^6.1.0",
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "serialport": "^8.0.7",
